--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,9 @@
 steps: # Significa, quais passos vamos executar
 
 - id: "Rodando docker-compose" # Nome da etapa
-  name: 'gcr.io/$PROJECT_ID/docker-compose' # Informa a imagem que o docker tem para ele rodar o docker-compose, nesse caso escolhi a imagem docker-compose
+  name: 'gcr.io/$PROJECT_ID/docker-compose:1.25.5' # Informa a imagem que o docker tem para ele rodar o docker-compose, nesse caso escolhi a imagem docker-compose
   args: ['-f', 'docker-compose.cloudbuild.yaml', 'up', '-d'] # argumento que quero que ele faça no docker-compose
+
+- id: "Rodando docker ps" # Nome da etapa
+  name: 'gcr.io/cloud-builders/docker'
+  args: ['ps']
