--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,3 +19,11 @@ steps: # Significa, quais passos vamos executar
 - id: "Rodando key:generate" # Nome da etapa
   name: 'gcr.io/cloud-builders/docker'
   args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate']
+
+- id: "Rodando migrations" # Nome da etapa
+  name: 'gcr.io/cloud-builders/docker'
+  args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'migrate']
+
+- id: "Rodando os testes" # Nome da etapa
+  name: 'gcr.io/cloud-builders/docker'
+  args: ['exec', '-t', 'app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml'] # vai rodar os testes examples iniciais do laravel
