--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,26 +8,26 @@ steps: # Significa, quais passos vamos executar
   name: 'gcr.io/cloud-builders/docker'
   args: ['exec','-u','root','-t','app','chown','-R','www-data:www-data','/var/www']
 
-- id: "Rodando docker ps" # Nome da etapa
+- id: "Rodando docker ps"
   name: 'gcr.io/cloud-builders/docker'
   args: ['ps'] # esse docker ps é simplesmente para ter mais informações no processo
 
-- id: "Rodando composer" # Nome da etapa
+- id: "Rodando composer"
   name: 'gcr.io/cloud-builders/docker'
   args: ['exec', '-t', 'app', 'composer', 'install']
 
-- id: "Copiando .env" # Nome da etapa
+- id: "Copiando .env"
   name: 'gcr.io/cloud-builders/docker'
   args: ['exec', '-t', 'app', 'cp', '.env.example', '.env']
 
-- id: "Rodando key:generate" # Nome da etapa
+- id: "Rodando key:generate"
   name: 'gcr.io/cloud-builders/docker'
   args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate']
 
-- id: "Rodando migrations" # Nome da etapa
+- id: "Rodando migrations"
   name: 'gcr.io/cloud-builders/docker'
   args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'migrate']
 
-- id: "Rodando os testes" # Nome da etapa
+- id: "Rodando os testes"
   name: 'gcr.io/cloud-builders/docker'
   args: ['exec', '-t', 'app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml'] # vai rodar os testes examples iniciais do laravel
